2007-02-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-window-cmn-menu-example.c:
	* examples/hildon-window-menu-example.c: Adding a common menu example
	and a window menu example.

	* src/hildon-program.c: Adding a note to the documentation about
	HildonProgram reffing. Fixes MB#867. 

	* src/hildon-window.c: Fixing the menu ref counting problem. Now
	applications are NOT supposed to take care about menu destroying since
	the HildonWindow handles that. Adding this to the documentation. Fixes
	NB#46434.

2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-program.c:
	* src/hildon-window.c: Trap the X error instead of aborting. A patch
	by Johan Bilien, fixes MB#900.

2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-number-editor.c:
	* src/hildon-number-editor.h: Prefixing the number editor enums with
	HILDON_NUMBER_EDITOR_ERROR_. Not sure why I haven't really noticed
	this before.

2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c: Small documentation fixes.

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-get-password-dialog-example.c:
	* examples/hildon-login-dialog-example.c:
	* examples/hildon-set-password-dialog-example.c: Adding examples for
	password dialogs.

	* src/hildon-get-password-dialog.c: Doc fix.

	* src/hildon-login-dialog.c: Do not show the username as hidden field. 

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* HACKING: Adding a HACKING file with some basic rules of styling and
	code formatting.

2007-02-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-button.c:
	* src/hildon-color-button.h: Updating documentation.

	* src/hildon-helper.c: Correcting some formatting glitches.
