@@ -1,6 +1,12 @@
 2007-02-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/Makefile.am:
+	* examples/hildon-vvolumebar-example.c: Adding an exmaple for
+	HildonVVolumeBar.
+
+2007-02-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* examples/Makefile.am:
 	* examples/hildon-window-cmn-menu-example.c:
 	* examples/hildon-window-menu-example.c: Adding a common menu example
 	and a window menu example.
